tests/rosetta/out/Haskell/call-an-object-method-1.hs
-- Generated by Mochi compiler v0.10.26 on 2025-07-16T09:30:29Z
-- Code generated by Mochi compiler; DO NOT EDIT.
{-# LANGUAGE DeriveGeneric #-}

module Main where

import GHC.Generics (Generic)

data Foo = Foo
  {
  }
  deriving (Eq, Show, Generic)

myValue = Foo {}

myPointer = Foo {}

main :: IO ()
main = do
  ValueMethod (myValue) 0
  PointerMethod (myPointer) 0
  ValueMethod (myPointer) 0
  PointerMethod (myValue) 0
  ValueMethod (myValue) 0
  PointerMethod (myPointer) 0
